* Fixed crash in derived variable conversion for volume mixing ratio from
  mass mixing ratio (for total air).

* Changed dimension argument of 'flatten()' operation from string to
  identifier.

* Fixed issue where -inf/+inf valid_min/valid_max attributes could not be
  exported as float values in the Python harp.export_product() interface.

0.3 2016-09-30
~~~~~~~~~~~~~~

* The changes between 0.2 and 0.3 are extensive. The list below provides the
  most important aspects, but there are many more smaller changes that are not
  listed.

* HARP 'actions' are now called 'operations' and are now executed in a strict
  sequence. This means that you can now do things like:
    'derive(var); var < 10; exclude(var)'

* Added harpprofile command line tool that allows regridding and smoothing
  of vertical gridded data. 
  Also added harp_product_regrid_vertical_with_axis_variable(),
  harp_product_regrid_vertical_with_collocated_dataset(), and
  harp_product_smooth_vertical() to C interface.

* Added algorithm descriptions for the derived variable conversions to the
  HARP documentation.

* Introduced a more strict definition of variable names for the HARP data
  format. As part of this the list of supported species and associated naming
  has also been revised.

* Introduced strict separation between dry air and total/wet air. The default
  air density in HARP is now the total/wet air. Anything related to dry air
  should now be annotated as such in the variable name. As a result, 'dry_air'
  is now introduced as a species, and for mixing ratios the '_wet' postfix is
  removed and the '_dry_air' postfix is introduced.
  Derived variable conversions have been added for dry/wet conversion and for
  retrieving the needed 'molar mass' of total air.

* Added functionality to deal with HARP Datasets and Product Metadata to the
  public C library interface. The collocation result interface in the C
  libraryinterface has also been reworked to now work with HARP Datasets.
